konst/tests/misc_tests/collect_const_ui_tests/collect_const_break_err.stderr
error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/misc_tests/collect_const_ui_tests/collect_const_break_err.rs:3:3
  |
3 | };
  |   ^ consider adding a `main` function to `$DIR/tests/misc_tests/collect_const_ui_tests/collect_const_break_err.rs`

warning: unreachable expression
 --> tests/misc_tests/collect_const_ui_tests/collect_const_break_err.rs:2:5
  |
2 |     konst::iter::collect_const!{usize => 0usize..10,map(|_| break)}
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-----^^
  |     |                                                       |
  |     |                                                       any code following this expression is unreachable
  |     unreachable expression
  |
  = note: `#[warn(unreachable_code)]` on by default
  = note: this warning originates in the macro `$crate::__eval_closure` which comes from the expansion of the macro `konst::iter::collect_const` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/misc_tests/collect_const_ui_tests/collect_const_break_err.rs:2:5
  |
1 | const _: [usize; 9] = {
  |                  - help: consider specifying the actual array length: `0`
2 |     konst::iter::collect_const!{usize => 0usize..10,map(|_| break)}
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected an array with a size of 9, found one with a size of 0
  |
  = note: this error originates in the macro `konst::iter::collect_const` (in Nightly builds, run with -Z macro-backtrace for more info)
